# retropanic

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/drawable/: colors.xml  (+1 more)
android/app/src/profile/: AndroidManifest.xml
android/gradle/wrapper/: gradle-wrapper.properties
ephemeris/: CMakeCache.txt  Makefile  README.md  cmake_install.cmake  pubspec.yaml
ephemeris/android/: CMakeLists.txt  build.gradle  settings.gradle
ephemeris/android/src/main/: AndroidManifest.xml
ephemeris/android/src/main/kotlin/com/example/ephemeris/: EphemerisPlugin.kt
ephemeris/example/: README.md  pubspec.yaml
ephemeris/example/android/app/: build.gradle
ephemeris/example/ios/Runner/: Info.plist
ephemeris/example/ios/Runner.xcodeproj/: project.pbxproj
ephemeris/example/lib/: main.dart
ephemeris/example/test/: widget_test.dart
ephemeris/ios/: ephemeris.podspec
ephemeris/ios/Classes/: EphemerisPlugin.h  EphemerisPlugin.m  SwiftEphemerisPlugin.swift  ephemeris.c
ephemeris/lib/: ephemeris.dart
ephemeris/test/: ephemeris_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner/Base.lproj/: LaunchScreen.storyboard
lib/: app.dart  main.dart
lib/components/: ffi.dart  localStorage.dart  notificationHelper.dart  timeHelper.dart  uiHelper.dart
lib/models/: notifications.dart
lib/screens/: about.dart  edCard1.dart  edCard2.dart  edCard3.dart  edCard4.dart  edCard5.dart  edCard6.dart  home.dart  license.dart  settings.dart
test/: widget_test.dart
(+9 files in other folders)
